objects/wkdw__HealthVerification__c.object
<CustomObject>
    <fields>
        <fullName>wkdw__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Health Verifications</relationshipLabel>
        <relationshipName>Health_Verifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkdw__DeclinationReason__c</fullName>
        <description>This field captures the reason the employee declined an available health verification</description>
        <label>Declination Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Religious</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkdw__Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkdw__Employee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field connects the Vaccination record to the related Employee record</description>
        <label>Employee</label>
        <referenceTo>Employee</referenceTo>
        <relationshipLabel>Health Verifications</relationshipLabel>
        <relationshipName>Health_Verifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkdw__HealthCredentialDocumentDate__c</fullName>
        <description>This field captures the date that the health credential was issued. Verifiers may need to confirm if this also reflects the date that the related health event occurred</description>
        <label>Health Credential Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkdw__HealthCredentialExpirationDate__c</fullName>
        <description>This field tracks health verification expirations. For example, how often does an employee require a test, or, when does a vaccination require a booster based on local health authority guidance?</description>
        <label>Health Credential Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkdw__Status__c</fullName>
        <description>This field captures the status of the end-user&apos;s health verification status based on the submitted information.</description>
        <label>Health Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkdw__Type__c</fullName>
        <label>Health Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proof of Vaccination</fullName>
                </value>
                <value>
                    <fullName>Negative COVID-19 Test Results</fullName>
                </value>
                <value>
                    <fullName>Documentation of COVID-19 Recovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkdw__VerificationDate__c</fullName>
        <description>This field captures the date that an organization member verified the end user’s health credential.</description>
        <label>Verification Date</label>
        <type>DateTime</type>
    </fields>
    <label>Health Verification</label>
    <listViews>
        <fullName>wkdw__All</fullName>
        <columns>NAME</columns>
        <columns>wkdw__Declined__c</columns>
        <columns>wkdw__Employee__c</columns>
        <columns>wkdw__Type__c</columns>
        <columns>wkdw__Status__c</columns>
        <columns>wkdw__VerificationDate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HV-{0000000000}</displayFormat>
        <label>Health Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>